--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "bns.js",
   "version": "2.0.0",
-  "description": "Better name service than ENS, also supports email addresses",
+  "description": "Better name service",
+  "homepage": "https://github.com/elliptic-labs/bns",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elliptic-labs/bns"
+  },
   "main": "js/index.js",
   "scripts": {
     "build": "node compile.js",
     "test": "mocha --timeout 9000 -- ./test.js",
     "test:js": "mocha --timeout 9000 ./js/test.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Dillon Kellar",
+  "license": "GPL-3.0-only",
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
